--- a/src/app/saved-messages/saved-messages.component.html
+++ b/src/app/saved-messages/saved-messages.component.html
@@ -27,7 +27,7 @@
 
 
 
-<!-- <div class="position-fixed bottom-0 end-0 p-5">
+<div class="position-fixed bottom-0 end-0 p-5">
     <button type="button" class="btn btn-dark  mailbtn " data-bs-toggle="modal" data-bs-target="#staticBackdrop">
         Compose mail
     </button>
@@ -61,7 +61,7 @@
 
         </div>
     </div>
-</div> -->
+</div>
 
 
 
