--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -53,9 +53,9 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button (click)="savemessage()" class="btn bg-dark text-warning" data-bs-dismiss="modal">save as
+                    <button type="reset" (click)="savemessage()" class="btn bg-dark text-warning" data-bs-dismiss="modal">save as
                         draft</button>
-                    <button (click)="onitemadd()" class="btn bg-warning text-white btn-primary "
+                    <button  (click)="onitemadd()" class="btn bg-warning text-white btn-primary "
                         data-bs-dismiss="modal">sent message</button>
                 </div>
 
